--- a/templates/success.html
+++ b/templates/success.html
@@ -19,7 +19,7 @@
           type="text"
           id="sepal-length"
           name="sepal-length"
-          placeholder="Enter sepal length..."
+          placeholder="Enter sepal length in cm"
           required
         />
         <label for="sepal-width" style="margin-left: -190px"
@@ -29,7 +29,7 @@
           type="text"
           id="sepal-width"
           name="sepal-width"
-          placeholder="Enter sepal width..."
+          placeholder="Enter sepal width in cm"
           required
         />
         <label for="petal-length" style="margin-left: -185px"
@@ -39,7 +39,7 @@
           type="text"
           id="petal-length"
           name="petal-length"
-          placeholder="Enter petal length..."
+          placeholder="Enter petal length in cm"
           required
         />
         <label for="petal-width" style="margin-left: -195px"
@@ -49,7 +49,7 @@
           type="text"
           id="petal-width"
           name="petal-width"
-          placeholder="Enter petal width..."
+          placeholder="Enter petal width in cm"
           required
         />
         <input type="submit" value="Classify" />
